# watchtower-in-geil

./: .gitignore  CHANGELOG.md  Dockerfile  GEMINI.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: create-release.yml  docker-build.yml  test.yml
app/: __init__.py  config.py  docker_handler.py  main.py  metrics.py  notifier.py
tests/: test_config.py  test_docker_handler.py  test_hooks.py  test_logic.py  test_metrics_internal.py  test_notifier.py  test_scheduling.py
venv_fix/: pyvenv.cfg
venv_lint/: pyvenv.cfg
venv_verify/: pyvenv.cfg
